src/objects/loan__Repayment_Extensions__c.object
<CustomObject>
    <fields>
        <fullName>loan__Extension_Date__c</fullName>
        <description>Date on which extension was posted</description>
        <inlineHelpText>Date on which extension was posted</inlineHelpText>
        <label>Extension Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Repayment Extensions</relationshipLabel>
        <relationshipName>Repayment_Extensions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Days__c</fullName>
        <description>Number of days by which the installments were extended.</description>
        <inlineHelpText>Number of days by which the installments were extended.</inlineHelpText>
        <label>Number of Days</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Repayment Extensions</label>
    <nameField>
        <displayFormat>REXT-{000000000}</displayFormat>
        <label>Repayment Extensions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>